# poster-backend

./: data.sqlite  main.py  pyproject.toml  readme.md  requirements.txt
alembic/: env.py
alembic/app/api/: main.py
alembic/app/cruds/: __init__.py  follow.py  post.py
alembic/versions/: 05da91847d5e_initial.py  62c114280071_initial_changes.py  bde513a4e90a_initial_project.py  d31eb7b20f8b_add_saveds.py
app/: main.py
app/alembic/: env.py
app/api/: __init__.py  deps.py  main.py
app/core/: __init__.py  admin.py  base_model.py  config.py  db.py  security.py  token.py
app/cruds/: __init__.py  comment.py  follow.py  media.py  message.py  notification.py  post.py  settings.py  story.py  user.py  validation.py
app/models/: __init__.py  comment.py  follow.py  linked_tables.py  media.py  message.py  notification.py  post.py  settings.py  story.py  table_relations.py  user.py  user_settings.py  validation.py
app/schemas/: comment.py  follow.py  media.py  message.py  notification.py  post.py  response.py  settings.py  story.py  user.py  validation.py
app/templates/: email.html
app/tokens/: __init__.py  auth.py
app/utils/: mail.py  media.py  oauth.py  uid_tool.py
cruds/: comment.py  post.py  user.py
db/: __init__.py  database.py
models/: __init__.py  comment.py  media.py  post.py  relation_tables.py  story.py  user.py  user_settings.py
routers/: __init__.py  post.py  user.py
schemas/: __init__.py  comment.py  post.py  story.py  user.py
tests/: comment.py  depends.py  media.py  mesage.py  message.py  notification.py  post.py  settings.py  story.py  test_1.py  user.py  validation.py
(+21 files in other folders)
